<resources>
    <string name="app_name">Fit5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>


    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome To</string>
    <string name="fit5logo">fit5logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="register_here">Register Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_picture_library">Progress Picture Library</string>
    <string name="about">About</string>
    <string name="start_date">start date</string>
    <string name="my_routines">My Routines</string>
    <string name="capture_image">capture image</string>
    <string name="start_time">start time</string>
    <string name="end_date">end date</string>
    <string name="end_time">end time</string>
    <string name="routine_description">Routine description</string>
    <string name="exercise_name">Exercise name</string>
</resources>