<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/progress_picture_library" />
        <item
            android:id="@+id/nav_CustomWorkout"
            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="Custom Workout routines" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/abouticon"
            android:title="@string/about" />

    </group>
</menu>